# UsagiVerify

./: README.md  README_ja.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build-publish-ghcr.yml  foundry-test.yml  prove.yml
backend/: .gitignore  config.development.development.json  package.json  tsconfig.json
backend/src/: config.ts  index.ts
backend/src/controller/: index.ts  root.ts
backend/src/lib/: viem.ts
backend/src/util/: constants.ts
circuits/contracts/src/: Fibonacci.sol
circuits/lib/: Cargo.toml
circuits/lib/src/: crypto.rs  lib.rs
circuits/program/: Cargo.toml
circuits/program/src/: main.rs
circuits/script/: Cargo.toml
common/: package.json  tsconfig.json
common/src/: index.ts
contract/: .env.example  .gitignore  .prettierignore  README.md  hardhat.config.ts  package.json
contract/contracts/: ERC1155WithLock.sol
contract/data/: metadata  metadata2
contract/tasks/nft/: mint.ts  transfer.ts  unlock.ts
contract/tasks/utils/: getContractAddress.ts
contract/test/: ERC1155WithLock.test.ts
frontend/: next.config.mjs  package.json
frontend/src/components/: ConnectInitialScreen.tsx  LoadingSpinner.tsx  NFTGallery.tsx  Prove.tsx  QrCodeScreen.tsx  ServiceConnectionScreen.tsx  index.ts
frontend/src/lib/: atoms.ts
frontend/src/pages/: _app.tsx  _document.tsx  index.tsx  (+4 more)
infrastructure/: how-to-build-image.md
infrastructure/images/: Dockerfile.backend
manpoko/: build.js  config.development.development.json  package.json  tsconfig.json
manpoko/src/: config.ts  index.ts
old-circ/lib/: Cargo.toml
(+30 files in other folders)
